# VSCodeHelper

./: .gitignore  Add-VSCodeDir.ps1  Ask.ps1  Cargo.toml  Get-RecentVSCodeDirs.ps1  Get-VSCodeDir.ps1  Open-StorageJsonInVSCode.ps1  README.md  build.rs  check-all.ps1  clippy.toml
examples/: common.rs  list_keys.rs  opened_dirs.rs  opened_windows.rs  preview_entries.rs  print_storage_json.rs  recent_workspaces.rs  recently_opened_paths.rs  string_wrapper.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
src/: backup_folder_id.rs  backup_workspaces.rs  color.rs  color_info.rs  empty_window.rs  folder.rs  layout_info.rs  lib.rs  machine_id.rs  main.rs  paths.rs  profile_associations.rs  profile_dunder.rs  side.rs  storage_json.rs  theme.rs  theme_background.rs  tracing.rs  uri.rs  window_splash.rs  windows_state.rs  workspace.rs  workspace_id.rs
src/cli/: global_args.rs  json_log_behaviour.rs  mod.rs
src/cli/command/: chat.rs  mod.rs  workspace.rs
src/copilot_chat/: backup_dir.rs  mod.rs  models.rs
src/state_vscdb/: mod.rs  models.rs  schema.rs  state_vscdb.rs  well_known_keys.rs
src/state_vscdb/keys/: history_recently_opened_paths_list.rs  mod.rs
src/storage_json/: backup_folder_id.rs  backup_workspaces.rs  color.rs  color_info.rs  empty_window.rs  folder.rs  layout_info.rs  machine_id.rs  mod.rs  paths.rs  profile_associations.rs  profile_dunder.rs  side.rs  storage_json.rs  telemetry_dev_device_id.rs  telemetry_sqm_id.rs  theme.rs  ui_state.rs  uri.rs  window.rs  window_splash.rs  windows_state.rs  workspace.rs  workspace_id.rs  workspace_identifier.rs
src/workspace_json/: mod.rs
tests/: cli_fuzzing.rs  storage_json_tests.rs
vscodehelper-macros/: Cargo.toml
vscodehelper-macros/src/: lib.rs
vscodehelper-macros/tests/: string_wrapper.rs
