[package]
name = "vscodehelper"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/*", "vscodehelper-macros"]
resolver = "2"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive","rc"] }
serde_json = "1.0.140"
tracing = "0.1.41"
vscodehelper-macros = { version = "0.1.0", path = "vscodehelper-macros" }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"

[dev-dependencies]
common = { path = "examples/common" }
