[package]
name = "vscodehelper"
version = "0.2.0"
edition = "2024"
description = "Understanding the data that VSCode writes to disk"
authors = ["TeamDman"]
license = "MPL-2.0"
repository = "https://github.com/TeamDman/VSCodeHelper"
readme = "README.md"
keywords = ["vscode", "vs-code", "windows", "sqlite", "json"]
categories = ["development-tools"]

[workspace]
members = ["examples/*", "vscodehelper-macros"]
resolver = "2"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tracing = "0.1.41"
# vscodehelper-macros = { version = "0.1.0", path = "vscodehelper-macros" }
vscodehelper-macros = { version = "0.1.0" }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
percent-encoding = "2.3.1"

[dev-dependencies]
common = { path = "examples/common" }
