[package]
name = "vscodehelper"
version = "0.3.0"
edition = "2024"
description = "Understanding the data that VSCode writes to disk"
authors = ["TeamDman"]
license = "MPL-2.0"
repository = "https://github.com/TeamDman/VSCodeHelper"
readme = "README.md"
keywords = ["vscode", "vs-code", "windows", "sqlite", "json"]
categories = ["development-tools"]

[workspace]
members = ["examples/*", "vscodehelper-macros"]
resolver = "2"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tracing = "0.1.41"
vscodehelper-macros = { version = "0.1.0", path = "vscodehelper-macros" }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
percent-encoding = "2.3.1"
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
chrono = "0.4"
arbitrary = { version = "1.4.1", features = ["derive"] }

[[bin]]
name = "teamy-vscode"
path = "src/main.rs"

[dev-dependencies]
common = { path = "examples/common" }

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
multiple_crate_versions = "allow" # turn this off periodically to see how bad it has gotten :P
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives
multiple_unsafe_ops_per_block = "deny"
module_inception = "allow"
allow_attributes = "deny"
# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "allow" # facet macros use Unicode identifiers
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
